components/policies/rings/ring-4/base/base-snapshot/konflux-rbac/restrict-binding-serviceaccounts/create/restrict-binding-serviceaccounts-create-validatingadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-bindings-serviceaccounts-create.konflux-ci.dev
spec:
  policyName: restrict-bindings-serviceaccounts-create.konflux-ci.dev
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
